# Launchpad95

./: .gitignore  ClipSlotMK2.py  ColorsMK2.py  DeviceControllerStripProxy.py  Launchpad.py  LaunchpadWrapper.py  LoopSelectorComponent.py  NoteEditorComponent.py  PreciseButtonSliderElement.py  README.md  SkinMK1.py  SkinMK2.py  SpecialMixerComponent.py  TrackControllerComponent.py  WRAPPER_README.md  __init__.py  consts.py  pyproject.toml  pyvenv.cfg
Scripts/: activate  activate.bat  activate.fish
src/Launchpad95/: ButtonSliderElement.py  ColorsMK1.py  ConfigurableButtonElement.py  DefChannelStripComponent.py  DeviceControllerComponent.py  DeviceControllerStrip.py  DeviceControllerStripServer.py  InstrumentControllerComponent.py  Log.py  M4LInterface.py  MainSelectorComponent.py  NoteRepeatComponent.py  NoteSelectorComponent.py  ScaleComponent.py  Settings.py  SpecialProSessionComponent.py  SpecialProSessionRecordingComponent.py  SpecialSessionComponent.py  StepSequencerComponent.py  StepSequencerComponent2.py  SubSelectorComponent.py  TargetTrackComponent.py  __init__.py  custom_temperament.json
