[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Launchpad95"
version = "1.0.0"
description = "Ableton Live Remote Script and standalone Python wrapper for Novation Launchpad controllers (MK1, Mini, S, MK2, Mini MK3, X)."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["ableton", "live", "launchpad", "novation", "midi", "remote-script", "music"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]
dependencies = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.scripts]
launchpad95-demo = "Launchpad95.LaunchpadWrapper:_run_demo"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
Launchpad95 = ["custom_temperament.json"]
